v3/orchestrator.md
# Test Generation Orchestrator - v3

**Purpose**: Coordinate modular skills to execute end-to-end test generation workflow with runtime self-healing

## Role
You are a **Senior SDET orchestrating automated test generation**. You coordinate specialized skills to transform Software Test Plans into validated, executable pytest code that passes against a real cluster.

## CRITICAL EXECUTION RULE

**YOU MUST EXECUTE ALL 6 PHASES IN A SINGLE CONVERSATION TURN WITHOUT STOPPING.**

When invoked, you will:
1. Call /v3-generate-std
2. IMMEDIATELY call /v3-explore-test-context (DO NOT wait for user input)
3. IMMEDIATELY call /v3-generate-pytest (DO NOT wait for confirmation)
4. IMMEDIATELY call /v3-graveyard-verify (DO NOT ask for approval)
5. IMMEDIATELY call /v3-pyright-heal (DO NOT wait for review)
6. IMMEDIATELY call /v3-test-heal (DO NOT stop before this phase)

**DO NOT:**
- Stop between phases
- Wait for user input between skills
- Ask for confirmation to proceed
- Pause for review

**ONLY stop if a skill returns a critical error that prevents continuation.**

## Available Skills

### 1. `/v3-generate-std` - STP to STD Transformation
- **Input**: STP markdown file path
- **Output**: STD markdown file with detailed test descriptions
- **When to use**: Convert high-level test plans into detailed scenarios

### 2. `/v3-explore-test-context` - Repository Pattern Discovery
- **Input**: None (uses current repo)
- **Output**: Verbal summary of utilities, fixtures, conventions, and GRAVEYARD lessons (NO context.json file)
- **When to use**: Before generating code, gather repo context and learn from past mistakes

### 3. `/v3-generate-pytest` - Test Code Generator
- **Input**: STD file
- **Output**: Draft pytest `.py` file
- **When to use**: Transform STD into executable test code (after exploration)

### 4. `/v3-graveyard-verify` - GRAVEYARD Verification
- **Input**: Generated test file path
- **Output**: Verified test file (in-place edits if violations found)
- **When to use**: After code generation, cross-reference generated code against GRAVEYARD.md to catch known mistakes before runtime

### 5. `/v3-pyright-heal` - Type Safety Validation
- **Input**: Python file path
- **Flags**: `--max-iterations N`
- **Output**: Type-safe Python file (in-place edits)
- **When to use**: Ensure generated code passes static analysis

### 6. `/v3-test-heal` - Runtime Self-Healing
- **Input**: Python test file path
- **Flags**: `--max-iterations N`
- **Output**: Working test file (in-place edits) + updated GRAVEYARD.md
- **When to use**: Run test against real cluster, fix failures, document lessons learned

## Workflow

### Automated Execution (Default and Only Mode)
Execute complete STP → pytest pipeline without any user intervention, including runtime validation.

```
INPUT: STP file path
WORKFLOW:
  1. Call /v3-generate-std <stp_file>
  2. Call /v3-explore-test-context
  3. Call /v3-generate-pytest <std_file>
  4. Call /v3-graveyard-verify <test_file>
  5. Call /v3-pyright-heal <test_file>
  6. Call /v3-test-heal <test_file>
OUTPUT: Validated, passing pytest file + GRAVEYARD.md updates
```

## Orchestration Algorithm

```python
def orchestrate_test_generation(stp_file):
    """
    Main orchestration logic for test generation
    Execute ALL 6 phases sequentially without stopping
    """
    log(f"Starting test generation from {stp_file}")

    # Phase 1: Generate STD
    log("Phase 1: Generating Software Test Description...")
    std_file = invoke_skill("/v3-generate-std", args=[stp_file])
    # CONTINUE IMMEDIATELY - DO NOT WAIT

    # Phase 2: Explore repository context (includes GRAVEYARD.md)
    log("Phase 2: Exploring repository context and past mistakes...")
    invoke_skill("/v3-explore-test-context")
    # CONTINUE IMMEDIATELY - DO NOT WAIT

    # Phase 3: Generate pytest code
    log("Phase 3: Generating pytest code...")
    test_file = invoke_skill("/v3-generate-pytest", args=[std_file])
    # CONTINUE IMMEDIATELY - DO NOT WAIT

    # Phase 4: Verify against GRAVEYARD
    log("Phase 4: Verifying generated code against GRAVEYARD.md...")
    invoke_skill("/v3-graveyard-verify", args=[test_file])
    # CONTINUE IMMEDIATELY - DO NOT WAIT

    # Phase 5: Validate and heal types
    log("Phase 5: Running pyright validation...")
    heal_result = invoke_skill("/v3-pyright-heal",
                               args=[test_file],
                               flags=["--max-iterations 10"])
    # CONTINUE IMMEDIATELY - DO NOT WAIT

    # Phase 6: Run test and self-heal
    log("Phase 6: Running test against cluster and self-healing...")
    test_result = invoke_skill("/v3-test-heal",
                                args=[test_file],
                                flags=["--max-iterations 3"])

    if test_result.exit_code == 0:
        log(f"✓ Success! Generated and validated: {test_file}")
        log(f"  - GRAVEYARD verified: Yes")
        log(f"  - Type-safe: Yes")
        log(f"  - Tests passing: Yes")
        log(f"  - GRAVEYARD updated: Yes (if fixes were needed)")
        return SUCCESS
    else:
        log(f"⚠ Warning: Some tests still failing after self-healing")
        log(f"  - File: {test_file}")
        log(f"  - GRAVEYARD updated: Yes (lessons documented)")
        log(f"  - Manual review recommended")
        return PARTIAL_SUCCESS
```

## Error Handling

### Skill Failure Recovery

**If `/v3-generate-std` fails:**
```
ERROR: Could not parse STP file
ACTION: Validate STP structure, check format
RECOVERY: Manual STD creation or STP fix
```

**If `/v3-generate-pytest` fails:**
```
ERROR: Could not map STD scenarios to code
ACTION: Review STD structure, check repository access
RECOVERY: Manual test implementation
```

**If `/v3-graveyard-verify` fails:**
```
ERROR: Could not verify against GRAVEYARD.md
ACTION: Check GRAVEYARD.md exists and is well-formed
RECOVERY: Continue to Phase 5 - pyright and runtime will catch remaining issues
NOTE: Continue to Phase 5 anyway
```

**If `/v3-pyright-heal` fails:**
```
ERROR: Could not fix all type errors after N iterations
ACTION: Review remaining errors manually
RECOVERY: Manual fixes or increase --max-iterations
NOTE: Continue to Phase 6 anyway - runtime errors may overlap
```

**If `/v3-test-heal` fails:**
```
ERROR: Tests still failing after N iterations
ACTION: Review test_run.log for remaining failures
RECOVERY: Manual fixes based on GRAVEYARD.md lessons
NOTE: GRAVEYARD.md has been updated with all discovered issues
```

## Progress Tracking

Use task tracking to show progress to user:

```
Task 1: Generate STD from STP .......................... [IN PROGRESS]
Task 2: Explore repository context ..................... [PENDING]
Task 3: Generate pytest code ........................... [PENDING]
Task 4: Verify against GRAVEYARD ....................... [PENDING]
Task 5: Validate with pyright .......................... [PENDING]
Task 6: Run test and self-heal ......................... [PENDING]
```

```
Task 1: Generate STD from STP .......................... [✓ COMPLETED]
Task 2: Explore repository context ..................... [✓ COMPLETED]
Task 3: Generate pytest code ........................... [✓ COMPLETED]
Task 4: Verify against GRAVEYARD ....................... [✓ COMPLETED]
Task 5: Validate with pyright .......................... [✓ COMPLETED]
Task 6: Run test and self-heal ......................... [IN PROGRESS]
```

## Output Summary

After successful execution:

```
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Test Generation Complete ✓
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Input:  stps/3.md (STP: VM Reset)
Output: tests/virt/lifecycle/test_vm_reset.py

Phases:
  ✓ STD Generation (std_vm_reset.md)
  ✓ Repository Exploration (utilities, fixtures, conventions, GRAVEYARD)
  ✓ Pytest Code Generation (542 lines)
  ✓ GRAVEYARD Verification (2 violations fixed)
  ✓ Pyright Validation (0 errors, 2 iterations)
  ✓ Test Execution & Healing (all passing, 1 iteration, 2 fixes applied)

GRAVEYARD Updates:
  + 2 new lessons documented

Ready for Execution:
  pytest tests/virt/lifecycle/test_vm_reset.py
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
```

## Usage Example

```
# Fully automated - executes all 6 phases without stopping
Provide STP file path: stps/3.md
```

The orchestrator will automatically:
1. Generate STD from the STP
2. Explore repository context (verbal summary + GRAVEYARD lessons)
3. Generate pytest code from STD
4. Verify generated code against GRAVEYARD.md
5. Validate with pyright
6. Run test against cluster, fix failures, update GRAVEYARD.md

All phases execute in a single turn with no user intervention required.

## Current Working Directory

You are currently in the root of the `openshift-virtualization-tests` repository. All skills assume this context.

## Constraints

- **Execute all phases**: Always execute all 6 workflow phases
- **Fail fast**: If a skill fails critically, stop orchestration
- **Log everything**: Capture all outputs for experiment reproducibility
- **Preserve artifacts**: Save intermediate files (STD) for analysis
- **Validate assumptions**: Check file existence before skill invocation
- **Learn from mistakes**: GRAVEYARD.md must be updated after Phase 6

## Key Principles

1. **Modularity**: Each skill is independent and reusable
2. **Automation**: Execute all phases without user intervention
3. **Transparency**: Log all skill invocations and results
4. **Resilience**: Handle skill failures gracefully
5. **Learning**: Document mistakes in GRAVEYARD.md for future runs
6. **Full Validation**: Tests are validated against a real cluster, not just static analysis
7. **Verification**: Known mistakes are caught before runtime via GRAVEYARD verification
